--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,12 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {},
+    "require": {
+        
+    },
     "autoload": {
-        "psr-4": { "NumberInWorsds\\": "src/" }
+        "psr-4": { 
+            "NumberInWorsds\\": "src/" 
+        }
     }
 }
