--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,22 @@
 {
     "name": "joaoreisweb/numbers-in-words",
-    "description": "This library convert numbers into words in Portuguese and English. Short and long scale. ",
+    "description": "This library convert numbers into words in Portuguese and English. Short and long scale.",
     "type": "library",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Joao Reis",
-            "email": "web@joaoreis.pt"
-        }
-    ],
+    "keywords": ["number", "numbers", "in", "to", "words", "converter", "string", "money", "currency", "short-scale", "number-transformer", "currency-transformer", "numbers-to-text"],
+    "authors": [{
+        "name": "Joao Reis",
+        "email": "web@joaoreis.pt"
+    }],
     "minimum-stability": "stable",
-    "require": {},
+    "require": {
+        "php": ">=5.6|>=7.4"
+    },
+    "require-dev": {},
     "autoload": {
         "psr-4": {
-            "joaoreisweb\\":"src/"
+            "joaoreisweb\\": "src/"
         }
-    }
+    },
+    "autoload-dev": {}
 }
