--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.6|>=7.4"
+        "php": "^7.0"
     },
     "require-dev": {},
     "autoload": {
